cosine scaling, division by standard deviation of the distances, 
division by max distance
  Added ANOVA to summary for relational SOM
  Added ANOVA to summary of somSC for numeric and relational SOM

Code improvements:
  Changed default value of init.proto to "obs" for "relational" algorithm

Fixed bugs:
  Changed scree plot title and ylabel to "proportion of unexplained variables"

Misc:
  Added test : equivalence of numeric SOM and relational SOM on squared 
euclidian distance

********************************************************************************
SOMbrero 0.4
New features:
  Implementation of the "dissimilarity" algorithm to handle dissimilarity data
  Plots, quality functions and super-clustering have been updated to handle this
case

Code improvements:
  New way to handle distance calculations
  New way to handle the 'korresp' preprocessing (full matrix is now included)
  Slightly changed default values for Letremy's radius and neighborhood: they
are now exactly the same than in the original programs

Fixed bugs:
  Fixed bug with default options in korresp case
  Fixed bug with affectation step in korresp case
  Fixed bug for what="add" and type="graph" (node sizes were wrong)

Misc:
  Added markdown vignettes: one general and one for each case; hence, the
package now depends on R version 3.0 or higher
  Added citation file
  Added demos
  Removed unecessary tests and examples


********************************************************************************
SOMbrero 0.3
New features:
  Implementation of the "korresp" algorithm to handle contingency table
  Plots, quality functions and super-clustering have been updated to handle this
case

Fixed bugs:
  Bug fixed in the dendrogram of super-clustering (percentage of explained
variance was incorrectly displayed)
  Bug fixed in smooth.dist and umatrix (distances were reversed)


********************************************************************************
SOMbrero 0.2-2
New options: